<resources>
    <string name="app_name">Qadmni</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="str_my_cart">My Cart</string>
    <string name="str_my_orders">My Orders</string>
    <string name="str_fav_list">My Favourites</string>
    <string name="my_profile">My Profile</string>
    <string name="str_settings">Settings</string>
    <string name="str_partner_login">Partner Login</string>
    <string name="str_logout">Logout</string>
    <string name="search_items">Search</string>
    <string name="your_cart">My Cart</string>
    <string name="str_select_language">Select Language</string>
    <string name="str_btn_save">Save</string>
    <string name="str_english">English</string>
    <string name="str_arabic">العربية</string>
    <string name="dlg_ok">Ok</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="str_err_server_err">Server Error</string>
    <string name="please_wait">Please wait…</string>
    <string name="str_name_hint">Name</string>
    <string name="str_user_password">Password</string>
    <string name="str_user_phone_no_hint" translatable="false">Phone number</string>
    <string name="str_user_phone_no" translatable="false">Phone No</string>
    <string name="str_confirm_user_password">Confirm Password</string>
    <string name="str_email_hint">Email</string>
    <string name="str_ph_hint">Phone</string>
    <string name="str_subscribe_btn">Subscribe Now</string>
    <string name="str_next">Next</string>
    <string name="str_err_name_empty">Please enter your name</string>
    <string name="str_err_pass_emty">Please enter password</string>
    <string name="str_err_email_empty">Please enter your email</string>
    <string name="str_err_ph_empty">Plase enter phone number</string>
    <string name="str_err_pass_wrong">Please enter correct password</string>
    <string name="str_err_ph_wrong">Please enter correct phone number</string>
    <string name="str_err_email_wrong">Please enter correct email id</string>
    <string name="str_shop_details">Shop details</string>
    <string name="str_shop_name_hint">Business Name (English)</string>
    <string name="str_shop_location_hint">Business Location</string>
    <string name="str_register_now">Register Now</string>
    <string name="str_google_map_key" translatable="false">AIzaSyADHuvEn15aYIA9wBHtusur25M1w4MhEW0</string>
    <string name="str_location_not_found">Location is not found</string>
    <string name="str_select">Select</string>
    <string name="str_err_shop_name_empty">Please enter shop name in english</string>
    <string name="str_register_murchent_success">Merchant registered successfully</string>
    <string name="salad_by">by</string>
    <string name="salad_distance">Km</string>
    <string name="salad_time">min</string>
    <string name="sar">SAR</string>
    <string name="str_err_shop_address_empty">Please select address correctly</string>
    <string name="str_user_name_hint">Email Id</string>
    <string name="str_login_to_acc">Login to your account</string>
    <string name="str_user_forgot_password">Cannot access your account?</string>
    <string name="str_new_quadmni">New to qadmni?</string>
    <string name="str_create_acc">Create account</string>
    <string name="str_err_username_empty">Please enter username</string>
    <string name="title_activity_vendor_main" translatable="false">VendorMainActivity</string>
    <string name="str_add_new_product">Add New Product</string>
    <string name="my_subscription">My Subscriptions</string>
    <string name="str_server_err_title">Server Error</string>
    <string name="str_server_err_desc">Something went wrong on server try again</string>
    <string name="str_login_err_title">Login Error</string>
    <string name="str_user_name" translatable="false">Name</string>
    <string name="str_details">Details</string>
    <string name="str_details_product" translatable="false">delicious ice cream made up of coconut and cream ...</string>
    <string name="str_avail_soon">Available for sell</string>
    <string name="str_update">UPDATE</string>
    <string name="str_vender_login">Vendor Login</string>
    <string name="str_quick_start">Quick Start</string>
    <string name="str_login">Login</string>
    <string name="str_start_quickly">Get started quickly</string>
    <string name="str_register">Register</string>
    <string name="str_register_customer_success">Registration is successfull</string>
    <string name="str_register_err_title">Register Error</string>
    <string name="str_net_err">Network Error</string>
    <string name="str_err_net_msg">Please connect to the internet</string>
    <string name="onesignal_app_id" translatable="false">29d2c9ef-09ee-468b-96c9-b26340758d9a</string>
    <string name="str_reviews">Reviews</string>
    <string name="str_price">Price</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_err_product_name_empty">Please enter product name in english</string>
    <string name="str_err_product_details_empty">Please add product details in english</string>
    <string name="str_err_price_empty">Please enter valid price</string>
    <string name="str_image_upload_success">Item added successfully</string>
    <string name="str_google_matrix_key" translatable="false">AIzaSyADHuvEn15aYIA9wBHtusur25M1w4MhEW0</string>
    <string name="str_category_hint">Category</string>
    <string name="str_err_add_product">Add Product Error</string>
    <string name="str_err_categry_list">Cateogry Error</string>
    <string name="str_err_image">Please select the product image</string>
    <string name="str_product_name_en_hint">Product Name (English)</string>
    <string name="str_product_name_ar_hint">Product Name (Arabic)</string>
    <string name="str_details_en">Product Details (English)</string>
    <string name="str_details_ar">Product Details (Arabic)</string>
    <string name="str_err_product_name_ar_empty">Please enter product name in arabic</string>
    <string name="str_err_product_details_ar_empty">Please enter productdetails in arabic</string>
    <string name="str_product_offer">Product offer</string>
    <string name="str_vendor_dashboard">Vendor Dashboard</string>
    <string name="place_order">Place Your Order</string>
    <string name="str_shop_name_ar_hint">Business Name (Arabic)</string>
    <string name="str_err_shop_name_ar_empty">Please enter shop name in arabic</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="str_delivery">DELIVERY</string>
    <string name="str_asap">ASAP</string>
    <string name="str_schedule">Schedule</string>
    <string name="str_pick_time"><![CDATA[Pick a date & time]]></string>
    <string name="str_payment">PAYMENT</string>
    <string name="str_pay_opt">PAYPAL</string>
    <string name="str_cash">CASH</string>
    <string name="str_address_main">Select Address</string>
    <string name="str_add_line">Tap on map to select address</string>
    <string name="str_add_not_selected">Address not selected</string>
    <string name="str_delivery_type_not_selected">Please select delivery type</string>
    <string name="str_payment_mode_not_slected">Please select payment method</string>
    <string name="str_err_location_map">Please select the proper location</string>
    <string name="str_place_order_title">Place Order Error</string>
    <string name="str_your_cart">Your Cart</string>
    <string name="str_edit">Edit</string>
    <string name="btn_check_out">Proceed to checkout</string>
    <string name="cart_one_item" translatable="false">Cheese Burger</string>
    <string name="cart_one_qty" translatable="false">x</string>
    <string name="cart_one_item_price" translatable="false">20</string>
    <string name="str_total">Total</string>
    <string name="str_btn_pay">PAY</string>
    <string name="charge_details">Tax details</string>
    <string name="usd">USD</string>
    <string name="str_err_order_init">Your order is not generated try again</string>
    <string name="str_free">Free</string>
    <string name="str_not_avail">Not available for sell</string>
    <string name="str_confirm_n_pay">Confirm and Pay</string>
    <string name="add_more">Add more</string>
    <string name="user_denied_permission">Permission is denied for this operation</string>
    <string name="location_problem">Location problem</string>
    <string name="str_live_track">LIVE ORDERS</string>
    <string name="str_past_orders">PAST ORDERS</string>
    <string name="str_err_order_confirm">Confirm Order Error</string>
    <string name="str_order_confirm_success">Order confirm successfully</string>
    <string name="str_sort">SORT BY</string>
    <string name="str_filter">FILTER BY</string>
    <string name="str_high">High</string>
    <string name="str_low">Low</string>
    <string name="str_nearer">Nearer</string>
    <string name="str_farther">Farther</string>
    <string name="btn_apply">APPLY</string>
    <string name="str_clear">CLEAR</string>
    <string name="str_nearest_shop">Distance</string>
    <string name="raduis_selected">km.</string>
    <string name="str_review">Review</string>
    <string name="str_filter_activity_title">Filter Product</string>
    <string name="str_err_location_denied">Location Denied</string>
    <string name="btn_reset">RESET</string>
    <string name="str_track_order">FROM</string>
    <string name="str_track_company_name" translatable="false">United Foods Pvt.ltd</string>
    <string name="str_order_date">Order Date</string>
    <string name="str_order_date_data" translatable="false">05-04-2017 20:23 PM</string>
    <string name="str_order_id">Order Id</string>
    <string name="str_order_id_data" translatable="false">2345622</string>
    <string name="str_order_placed">Order has been placed</string>
    <string name="str_order_track">TRACK ORDER</string>
    <string name="str_order_total">TOTAL</string>
    <string name="str_order_price" translatable="false">542356.45</string>
    <string name="str_order">ORDERS</string>
    <string name="str_previous_orders">VIEW DETAILS</string>
    <string name="str_previous_delivered">Order has been placed</string>
    <string name="str_previous_1" translatable="false">245622</string>
    <string name="str_order_delivery_type">Delivery Type</string>
    <string name="str_order_payment_mode">Payment Mode</string>
    <string name="str_order_demo_delivery_type">Online-PAYPAL</string>
    <string name="str_order_demo_delivery_mode">Delivery</string>
    <string name="str_track_order_title">TRACK ORDERS</string>
    <string name="str_track_order_id">Order Id:</string>
    <string name="str_track_order_address" translatable="false">7835 Abi Hilal Askari,Al Mohammadiyah</string>
    <string name="str_track_order_address_1" translatable="false">Riyadh 12363 4258,Saudi Arabia</string>
    <string name="str_track_order_details">ORDER DETAILS</string>
    <string name="str_provide_feedback">Provide Feedback</string>
    <string name="str_delivery_mode">Pickup</string>
    <string name="str_home_delivery">Home delivery</string>
    <string name="str_customer_name_hint">Customer Name</string>
    <string name="str_customer_address">Customer Address</string>
    <string name="str_show_on_map">Show on Map</string>
    <string name="str_change_status">Change status</string>
    <string name="str_update_status">Update status</string>
    <string name="str_pay_pal">Pay Pal</string>
    <string name="str_cash_small">Cash</string>
    <string name="str_pick_up">Pick Up</string>
    <string name="str_forgot_msg">You will receive your credentials,if your email id matches with registered email id</string>
    <string name="str_previous_date_1" translatable="false">04-04-2016 10:23 PM</string>
    <string name="price_tv">SAR</string>
</resources>