<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_myOrders"
        android:icon="@drawable/ic_shopping_basket_white_24dp"
        android:title="@string/str_my_orders" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_box_white_24dp"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/nav_subscription"
        android:icon="@drawable/ic_renew_sub_24_white"
        android:title="@string/my_subscription" />
    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/str_settings" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_power_settings_new_white_24dp"
        android:title="@string/str_logout" />
</menu>
